# bitris-docs

./: .gitignore  Cargo.toml  LICENSE  README.md  book.toml
docs/: 404.html  index.html  print.html  searchindex.js  searchindex.json
docs/bitris/: 000_abstract.html  100_key_elements.html  110_pieces_and_placements.html  120_boards.html  130_moves.html  140_order_cursor.html  150_placement_flow.html
docs/commands/: 000_abstract.html  100_key_elements.html  110_bit_shapes.html  120_clipped_board.html  130_shape_counter.html  200_features.html  210_pc_possible.html
docs/examples/: moves.rs  order_cursor.rs  pc_possible.rs  placement_flow.rs
src/: SUMMARY.md  what_is_this_documents.md
src/bitris/: 100_key_elements.md  110_pieces_and_placements.md  120_boards.md  130_moves.md  140_order_cursor.md  150_placement_flow.md
src/commands/: 100_key_elements.md  110_bit_shapes.md  120_clipped_board.md  130_shape_counter.md  210_pc_possible.md
src/examples/: boards.rs  elements_for_commands.rs  hello_world.rs  mod.rs  primitives.rs
src/preprocessors/: mapping_processor.rs  mdbook_embed.rs  process.rs
